--- a/css/bear.css
+++ b/css/bear.css
@@ -9,4 +9,16 @@ html {
 }
 
 /* Write your solution here */
+@media only screen and (min-width: 1196px) {
+#bear {
+    display: block;
+    left: 800px;
+    left: 800px;
+ }
+
+div {
+    display: block;
+ }
+}
+
 
